Update imbalanced data intergration tutorial

--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/UOT_pancreas_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/UOT_pancreas_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate imbalanced CITE-seq datasets from a pancreas tissue"
+    "# Integrate imbalanced scRNA-seq and CODEX datasets datasets from a pancreas tissue"
    ]
   },
   {
