update no celltype tutorial

--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,7 @@
     }
    ],
    "source": [
+    "# Load AnnData objects for the preprocessed datasets and datasets with shared features in two modalities\n",
     "combined_adata = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/combined_adata.h5ad')\n",
     "protein_adata_filter = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/protein_adata_filter.h5ad')\n",
     "rna_shared = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/rna_shared.h5ad')\n",
@@ -69,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if 'cell_type' in protein_adata_filter.obs.columns:\n",
-    "    # Create a new column 'cell_type1' based on 'cell_type' or any other logic you want\n",
+    "    # Create a new column 'cell_type1' based on 'cell_type' or any other logic you want for metrics calculation\n",
     "    combined_adata.obs['cell_type1'] = combined_adata.obs['cell_type'].copy()\n",
     "    protein_adata_filter.obs['cell_type1'] = protein_adata_filter.obs['cell_type'].copy()\n",
     "    rna_shared.obs['cell_type1'] = rna_shared.obs['cell_type'].copy()\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +145,7 @@
     "rna_aligned_protein = np.zeros(shape = (combined_adata.shape[0], protein_adata_filter.shape[1]))\n",
     "protein_aligned_rna = np.zeros(shape = (protein_adata_filter.shape[0], combined_adata.shape[1]))\n",
     "\n",
+    "# For each batch, assign predicted cell types based on transport weights\n",
     "for i in range(len(cellink.partition1)):\n",
     "    cell_id = cellink.partition1[i]\n",
     "    protein_id = cellink.partition2[[j for (k, j) in cellink.partition_d1_to_d2 if k == i][0]]\n",
@@ -164,7 +166,8 @@
     "        rna_source_ct_array[cell_id[j]] = sct \n",
     "        rna_predict_ct_array[cell_id[j]] = pct\n",
     "        rna_aligned_protein[cell_id[j]] = cellink.feature_imputation_partition1[i][j]\n",
-    "        \n",
+    "\n",
+    "# Repeat for protein batches\n",
     "for i in range(len(cellink.partition2)):\n",
     "    cell_id = cellink.partition2[i]\n",
     "    rna_id = cellink.partition1[[k for (k, j) in  cellink.partition_d1_to_d2 if j == i][0]]\n",
@@ -189,10 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform UMAP embedding on concatenated features for visualization\n",
     "import umap\n",
     "matched_rna = rna_source_ct_array == rna_predict_ct_array\n",
     "matched_protein = protein_source_ct_array == protein_predict_ct_array\n",
@@ -230,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,6 +249,7 @@
     }
    ],
    "source": [
+    "# Plot a normalized confusion matrix for cell type predictions\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt\n",
     "cm = confusion_matrix(np.concatenate([rna_source_ct_array, protein_source_ct_array], axis = 0), np.concatenate([rna_predict_ct_array, protein_predict_ct_array], axis = 0))\n",
@@ -265,7 +270,7 @@
     "for text in texts:\n",
     "    text.set_color('black')\n",
     "plt.title('uot pancreas CM')\n",
-    "# Save the plot to a PNG file\n",
+    "# Save the plot to a PDF file\n",
     "#plt.savefig('/Users/luosanj/Desktop/figures/celLink/cellink_tonsil_confusion_matrix.pdf', transparent=True, format = 'pdf')\n",
     "\n",
     "# Optionally show the plot as well\n",
@@ -274,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -289,6 +294,7 @@
     }
    ],
    "source": [
+    "# Print the number of correct predictions\n",
     "np.diagonal(cm).sum()"
    ]
   },
