update no celltype tutorial

--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate HPAP107 scRNA-seq and CODEX datasets from pancreas without datatype"
+    "# Integrate HPAP107 scRNA-seq and CODEX datasets from pancreas without cell type"
    ]
   },
   {
