uodate no celltype tutorial to download data online

--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -48,6 +48,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download HPAP107 data\n",
+    "dropbox_url = \"https://www.dropbox.com/scl/fo/5c19b3qu1qs4x7cbu9dul/AAWjk6zUWfsPlPy0KlNA8qM?rlkey=prgyepea8cnejy2d8yn5xasjl&e=2&st=oddr4tv3&dl=1\"\n",
+    "response = requests.get(dropbox_url)\n",
+    "with open(\"HPAP107_data.zip\", \"wb\") as f:\n",
+    "    f.write(response.content)\n",
+    "\n",
+    "print(\"download success\")\n",
+    "\n",
+    "extract_dir = \"unzipped_HPAP107_data\"\n",
+    "os.makedirs(extract_dir, exist_ok=True)\n",
+    "\n",
+    "with zipfile.ZipFile(\"HPAP107_data.zip\", 'r') as zip_ref:\n",
+    "    zip_ref.extractall(extract_dir)\n",
+    "\n",
+    "print(\"unzipped data in:\", extract_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -62,10 +85,10 @@
    ],
    "source": [
     "# Load AnnData objects for the preprocessed datasets and datasets with shared features in two modalities\n",
-    "combined_adata = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/combined_adata.h5ad')\n",
-    "protein_adata_filter = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/protein_adata_filter.h5ad')\n",
-    "rna_shared = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/rna_shared.h5ad')\n",
-    "protein_shared = sc.read_h5ad('/nfs/turbo/umms-drjieliu/usr/luosanj/CelLink/datasets/pancreas/protein_shared.h5ad')"
+    "combined_adata = sc.read_h5ad('unzipped_HPAP107_data/combined_adata.h5ad')\n",
+    "protein_adata_filter = sc.read_h5ad('unzipped_HPAP107_data/protein_adata_filter.h5ad')\n",
+    "rna_shared = sc.read_h5ad('unzipped_HPAP107_data/rna_shared.h5ad')\n",
+    "protein_shared = sc.read_h5ad('unzipped_HPAP107_data/protein_shared.h5ad')"
    ]
   },
   {
