--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.io import mmread\n",
+    "import requests\n",
+    "import os\n",
+    "import zipfile\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.rcParams[\"figure.figsize\"] = (6, 4)\n",
@@ -41,7 +44,7 @@
     "import sys\n",
     "import seaborn as sns\n",
     "\n",
-    "from cellink import Cellink\n"
+    "from cellink import Cellink"
    ]
   },
   {
@@ -51,7 +54,7 @@
    "outputs": [],
    "source": [
     "#download HPAP107 data\n",
-    "dropbox_url = \"https://www.dropbox.com/scl/fo/5c19b3qu1qs4x7cbu9dul/AAWjk6zUWfsPlPy0KlNA8qM?rlkey=prgyepea8cnejy2d8yn5xasjl&e=2&st=oddr4tv3&dl=1\"\n",
+    "dropbox_url = \"https://www.dropbox.com/scl/fo/pnzya149wk2uq7ak4yvej/ADsoD-Hz0s1BGBrAco-w3lU?rlkey=101pdmutrilndv2j4jxa2n5w9&e=1&st=rxntw6f0&dl=1\"\n",
     "response = requests.get(dropbox_url)\n",
     "with open(\"HPAP107_data.zip\", \"wb\") as f:\n",
     "    f.write(response.content)\n",
@@ -85,10 +88,10 @@
    ],
    "source": [
     "# Load AnnData objects for the preprocessed datasets and datasets with shared features in two modalities\n",
-    "combined_adata = sc.read_h5ad('unzipped_HPAP107_data/combined_adata.h5ad')\n",
-    "protein_adata_filter = sc.read_h5ad('unzipped_HPAP107_data/protein_adata_filter.h5ad')\n",
-    "rna_shared = sc.read_h5ad('unzipped_HPAP107_data/rna_shared.h5ad')\n",
-    "protein_shared = sc.read_h5ad('unzipped_HPAP107_data/protein_shared.h5ad')"
+    "combined_adata = sc.read_h5ad('unzipped_HPAP107_data/pancreas/combined_adata.h5ad')\n",
+    "protein_adata_filter = sc.read_h5ad('unzipped_HPAP107_data/pancreas/protein_adata_filter.h5ad')\n",
+    "rna_shared = sc.read_h5ad('unzipped_HPAP107_data/pancreas/rna_shared.h5ad')\n",
+    "protein_shared = sc.read_h5ad('unzipped_HPAP107_data/pancreas/protein_shared.h5ad')"
    ]
   },
   {
