Update documentation source files and requirements

--- a/docs/source/tutorials/scRNA_CODEX_HPAP023/hpap023_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_HPAP023/hpap023_tutorial.ipynb
@@ -8,6 +8,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overview\n",
+    "This tutorial demonstrates how to integrate HPAP023 scRNA-seq and CODEX spatial proteomic datasets using CelLink. It walks through data loading, preprocessing, feature matching across modalities, alignment with Cellink, and visualization and evaluation of integration quality.\n",
+    "\n",
+    "Outline\n",
+    "1. Environment and imports\n",
+    "2. Data loading (scRNA and CODEX)\n",
+    "3. Preprocessing and feature selection\n",
+    "4. Establish correspondence between RNA and protein features\n",
+    "5. Build Cellink object and perform alignment\n",
+    "6. Visualize integration and compute metrics\n",
+    "\n",
+    "Notes\n",
+    "- Update file paths to your local data directory before running.\n",
+    "- Run the notebook in an environment with packages listed in `docs/requirements.txt`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -26,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Environment & dependencies\n",
+    "The code below imports the primary packages used in this notebook. Ensure you have compatible versions of `anndata`, `scanpy`, `numpy`, `pandas`, `matplotlib`, and `cellink` installed. Use the environment or `pip install -r docs/requirements.txt` provided in the repository to reproduce results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -33,6 +61,16 @@
    "source": [
     "# read in rna data\n",
     "rna = pd.read_csv('/Users/luosanj/Desktop/project2/data/HPAP023/HPAP-023_exp_mat.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data files (scRNA)\n",
+    "Load the scRNA count matrix exported as CSV. The file is expected to have gene identifiers in the first column and cell barcodes as column headers. If your data format differs (e.g., MTX/loom/h5ad), adapt the loading step accordingly.\n",
+    "\n",
+    "Replace the hard-coded path with your local data path before executing."
    ]
   },
   {
@@ -64,12 +102,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Protein (CODEX) data\n",
+    "Load the CODEX protein-level AnnData object. The dataset should include spatial coordinates in `obsm['spatial']` and optional cell type annotations in `obs['cell_type']`. Here we remove any cells labeled as `Unidentified` to focus downstream analyses on annotated cells."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "protein_adata = sc.read_h5ad('/Users/luosanj/Desktop/project2/data/HPAP023/HPAP023-T1D-17y-7y-F-T_3_2_2-OCT.h5ad')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spatial filtering & QC\n",
+    "Depending on the imaging experiment, you may need to subset cells by spatial region or apply quality filters. In this example we keep cells within a spatial window (example thresholds shown) to remove potential artifacts at image edges. Adjust thresholds to your dataset."
    ]
   },
   {
@@ -134,6 +188,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cell type harmonization\n",
+    "Different datasets may use slightly different cell-type labels. The function below maps several related labels into a common vocabulary (for example grouping endothelial subtypes). Modify the mapping to match your annotation scheme."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -194,6 +256,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preprocessing scRNA\n",
+    "Standard preprocessing steps are applied: library-size normalization, log-transformation, and selection of highly variable genes (HVGs). We keep the top 5,000 HVGs for downstream alignment and visualization. Adjust `n_top_genes` based on dataset size."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -214,6 +284,14 @@
     "            rna_protein_correspondence.append([r, curr_protein_name])\n",
     "            \n",
     "rna_protein_correspondence = np.array(rna_protein_correspondence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature correspondence between modalities\n",
+    "Many CODEX protein markers map to one or more genes. The mapping file `protein_gene_relationship.csv` lists protein-to-gene correspondences. We use this to identify shared features between scRNA HVGs and CODEX proteins for alignment."
    ]
   },
   {
@@ -239,6 +317,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create shared AnnData objects\n",
+    "From the correspondence table we extract matched features and construct two AnnData objects (`rna_shared` and `protein_shared`) that contain only the shared features used for integration."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -249,6 +335,14 @@
     "protein_shared = protein_shared[protein_shared.obs['cell_type'].isin(extract_ct)]\n",
     "combined_adata = rna_adata1[rna_adata1.obs['cell_type'].isin(extract_ct)]\n",
     "protein_adata_filter = protein_adata_filter[protein_adata_filter.obs['cell_type'].isin(extract_ct)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Subset cell types of interest\n",
+    "To focus analysis, we subset both datasets to a set of cell types (e.g., Alpha, Exocrine, Delta-PP, Ductal). Remove or change this list to include different cell types or run the full dataset."
    ]
   },
   {
@@ -284,6 +378,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filter low-variance features\n",
+    "Remove features with low variance in either modality as they provide little information for alignment. The variance thresholds here are illustrative; tune them based on your data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -304,6 +406,14 @@
     "arr = [rna_shared, protein_shared]\n",
     "cellink = Cellink(full_ann1 = combined_adata, full_ann2 = protein_adata_filter, shared_ann1 = rna_shared, shared_ann2 = protein_shared)\n",
     "cellink.split_into_batches(arr, 300, seed = 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize Cellink and batching\n",
+    "Create a `Cellink` instance providing full and shared AnnData objects. When working with large datasets, split into batches to reduce memory usage and speed up transport computation. The `split_into_batches` call partitions both modalities."
    ]
   },
   {
@@ -709,6 +819,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alignment parameters and execution\n",
+    "Run the alignment routine with weights and regularization parameters. Important parameters:\n",
+    "- `wt1`, `wt2`: weights for modalities\n",
+    "- `lambd`, `reg`: regularization strengths\n",
+    "- `numItermax`: maximum iterations\n",
+    "Iteratively tune parameters for best performance on your dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -717,6 +839,14 @@
     "rna_source_ct_array = combined_adata.obs['cell_type']\n",
     "protein_source_ct_array = protein_adata_filter.obs['cell_type']\n",
     "rna_aligned_protein, rna_predict_ct_array, protein_aligned_rna, protein_predict_ct_array = cellink.synchronize_imputed_to_initial()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Synchronize imputed features and predict cell types\n",
+    "After alignment, imputed features are synchronized back to the original datasets. Predicted cell types are inferred from transport maps and can be compared to original annotations for evaluation."
    ]
   },
   {
@@ -760,6 +890,14 @@
    "source": [
     "cellink.visualize_integration(ann1_full_batch=combined_adata, ann2_full_batch=protein_adata_filter, arr2_imputed=protein_aligned_rna,\n",
     "                              datatype= ['scRNA', 'CODEX'], matched_cellids=protein_matched_cellids, direction=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualization of aligned features\n",
+    "Use the provided visualization utilities to inspect how well cells from the two modalities align. The plotting functions highlight matched cells and show imputed expression across modalities."
    ]
   },
   {
