--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -8,6 +8,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overview\n",
+    "This tutorial demonstrates how to integrate HPAP107 scRNA-seq and CODEX datasets from human pancreas using CelLink. It follows the structure used in the MaxFuse tutorials: clear separation of environment setup, data acquisition, preprocessing, alignment, evaluation, and visualization.\n",
+    "\n",
+    "Outline\n",
+    "1. Environment and imports\n",
+    "2. Data download and extraction\n",
+    "3. Loading preprocessed AnnData objects\n",
+    "4. Preparing annotations and handling missing cell types\n",
+    "5. Building Cellink object and running alignment\n",
+    "6. Predicting cell types via transport maps\n",
+    "7. Visualization and evaluation (UMAP, confusion matrix, GC, ASW)\n",
+    "8. Summary and next steps\n",
+    "\n",
+    "Notes\n",
+    "- Adjust file paths and parameters to your local environment and dataset sizes.\n",
+    "- Use the repository `docs/requirements.txt` to install compatible dependencies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -48,6 +70,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Environment & imports\n",
+    "The next cell imports core scientific Python packages and CelLink dependencies. Ensure the Python environment contains `anndata`, `scanpy`, `numpy`, `pandas`, `scikit-learn`, `umap-learn`, and `cellink` (see `docs/requirements.txt`). These libraries are used for data handling, preprocessing, dimensionality reduction, and alignment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -68,6 +98,14 @@
     "    zip_ref.extractall(extract_dir)\n",
     "\n",
     "print(\"unzipped data in:\", extract_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data download\n",
+    "Download the example HPAP107 dataset from the provided Dropbox link. The archive contains preprocessed AnnData objects for combined scRNA, CODEX, and shared-feature subsets. If using your own data, you can skip this download and load your local files instead."
    ]
   },
   {
@@ -95,6 +133,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loaded AnnData objects\n",
+    "- `combined_adata`: the full scRNA AnnData with RNA features and metadata.\n",
+    "- `protein_adata_filter`: the CODEX/protein AnnData object filtered for QC.\n",
+    "- `rna_shared` / `protein_shared`: matched-feature AnnData objects containing only features present in both modalities used for alignment.\n",
+    "\n",
+    "Each AnnData is expected to contain `.X` (expression), `.obs` (cell metadata), and optionally `.obsm['spatial']` for CODEX spatial coordinates."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -112,6 +162,14 @@
     "    del protein_adata_filter.obs['cell_type']\n",
     "    del rna_shared.obs['cell_type']\n",
     "    del protein_shared.obs['cell_type']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Handling cell type labels\n",
+    "Some datasets include a `cell_type` column. To avoid overwriting and to standardize metric calculations, we copy `cell_type` to `cell_type1` and then remove the original `cell_type`. If your dataset lacks cell-type annotations, skip this block — downstream evaluation will then run without ground-truth labels."
    ]
   },
   {
@@ -138,6 +196,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Batching strategy\n",
+    "Create a `Cellink` object and split shared-feature datasets into batches. Batching reduces memory usage and parallelizes transport computation. Choose batch sizes according to dataset size and available memory; larger batches speed convergence at the cost of memory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -154,6 +220,18 @@
    "source": [
     "cellink.alignment(wt1 = 0.5, wt2 = 0.5, n_neighbors=15,\n",
     "                  reg = 0.01, lambd = 0.007, reg_m1 = (20, 0.01), reg_m2 = (0.01, 20), numItermax = 1000, iterative=True, sparse = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alignment parameters\n",
+    "Run the alignment with tuning parameters controlling modality weights, regularization, and iterative refinements. Key parameters:\n",
+    "- `wt1`, `wt2`: relative importance of each modality\n",
+    "- `lambd`, `reg`: regularization terms\n",
+    "- `n_neighbors`: neighbors used to compute local structure\n",
+    "Tune these values empirically, monitor convergence, and inspect downstream metrics to choose the best settings."
    ]
   },
   {
@@ -217,6 +295,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting cell types and imputing features\n",
+    "After alignment, transport weights are used to predict cell types in each modality by aggregating transport mass to cells of each annotation class. We also impute cross-modal features using the learned transport maps. The loops below compute predicted labels and imputed feature matrices for all batches."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -232,6 +318,14 @@
     "dataall_2 = np.concatenate([scrna_all, codex_all], axis = 0)\n",
     "embedding_2 = umap.UMAP(n_components=2, n_epochs = 500, n_neighbors = 15, random_state = 30, min_dist = 0.5).fit_transform(dataall_2)\n",
     "ct_array_double_2 = np.concatenate([rna_source_ct_array, protein_source_ct_array], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "UMAP embedding for joint visualization\n",
+    "Concatenate original and imputed features to create joint feature vectors for scRNA and CODEX cells. Apply UMAP on the concatenated matrix to visualize how well modalities mix after alignment. Color points by cell type to assess matching quality."
    ]
   },
   {
@@ -256,6 +350,14 @@
     "                                   m1_predict_ct = rna_predict_ct_array,\n",
     "                                   m2_source_ct = protein_source_ct_array,\n",
     "                                   m2_predict_ct = protein_predict_ct_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quantitative metrics\n",
+    "Use built-in metrics to quantify alignment quality. The `cellink.metrics` module computes cell-type matching accuracy and other scores. Run these functions to obtain a numeric summary of performance."
    ]
   },
   {
@@ -301,6 +403,14 @@
     "\n",
     "# Optionally show the plot as well\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confusion matrix of predicted labels\n",
+    "Plot a normalized confusion matrix comparing source labels vs. predicted labels aggregated over both modalities. This helps identify systematic misclassification patterns across cell types."
    ]
   },
   {
@@ -412,6 +522,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Graph Connectivity (GC)\n",
+    "Graph Connectivity quantifies how well cells of the same type are connected in a k-nearest-neighbor graph. Higher GC indicates better modality mixing for each cell type. We compute GC at multiple k values to characterize local versus global structure after alignment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -430,6 +548,14 @@
     "    random_state=30\n",
     ").fit_transform(data_pca)\n",
     "ct_array_double_2 = np.concatenate([rna_source_ct_array, protein_source_ct_array], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dimensionality reduction before UMAP\n",
+    "Optionally perform PCA to reduce dimensionality before computing UMAP. This often speeds UMAP and removes noise while preserving major structure. We use 30 PCs in this example."
    ]
   },
   {
